# EcoScan

./: .env.example  README.md  SETUP.md  docker-compose.yml  mise.toml  startup.sh
.github/: labels.yml  renovate.json
.run/: AI Lint Fix.run.xml  AI Lint.run.xml  (+10 more)
ecoscan_ai/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  report.md
ecoscan_ai/src/ecoscan_ai/: llm.py  main.py  orchestrator.py
ecoscan_ai/src/ecoscan_ai/alternatives/: crew.py  models.py  worker.py
ecoscan_ai/src/ecoscan_ai/alternatives/config/: agents.yaml  tasks.yaml
ecoscan_ai/src/ecoscan_ai/api/: main.py
ecoscan_ai/src/ecoscan_ai/api/routes/: alternatives.py  green_score.py  jobs.py  product_analysis.py  savings.py  test.py
ecoscan_ai/src/ecoscan_ai/api/schemas/: alternatives.py  green_score.py  green_score_result.py  jobs.py  product_analysis.py  savings_request.py  savings_result.py  test.py
ecoscan_ai/src/ecoscan_ai/api/services/: job_store.py
ecoscan_ai/src/ecoscan_ai/core/: base_worker.py  models.py  rabbitmq_connection.py
ecoscan_ai/src/ecoscan_ai/crews/: crew.py
ecoscan_ai/src/ecoscan_ai/crews/alternatives/: alternatives_crew.py  crew.py
ecoscan_ai/src/ecoscan_ai/crews/alternatives/config/: agents.yaml
ecoscan_ai/src/ecoscan_ai/crews/config/: agents.yaml  tasks.yaml
ecoscan_ai/src/ecoscan_ai/crews/green_score/: greenscore_crew.py
ecoscan_ai/src/ecoscan_ai/crews/green_score/config/: agents.yaml  tasks.yaml
ecoscan_ai/src/ecoscan_ai/crews/product_analysis/: product_analysis_crew.py
ecoscan_ai/src/ecoscan_ai/crews/product_analysis/config/: agents.yaml  tasks.yaml
ecoscan_ai/src/ecoscan_ai/crews/savings/: savings_crew.py
ecoscan_ai/src/ecoscan_ai/crews/savings/config/: agents.yaml  tasks.yaml
ecoscan_ai/src/ecoscan_ai/greenscore/: crew.py  models.py  worker.py
ecoscan_ai/src/ecoscan_ai/greenscore/config/: tasks.yaml
ecoscan_ai/src/ecoscan_ai/messaging/: publisher.py
ecoscan_ai/src/ecoscan_ai/product_analysis/: crew.py  models.py  worker.py
ecoscan_ai/src/ecoscan_ai/product_analysis/config/: agents.yaml  tasks.yaml
ecoscan_ai/src/ecoscan_ai/savings/: crew.py  models.py  worker.py
ecoscan_ai/src/ecoscan_ai/savings/config/: agents.yaml  tasks.yaml
ecoscan_ai/src/ecoscan_ai/stores/: crew.py  models.py  worker.py
ecoscan_ai/src/ecoscan_ai/stores/config/: agents.yaml  tasks.yaml
ecoscan_ai/src/ecoscan_ai/tools/: __init__.py  backend_tool.py  dddg_search_tool.py  find_nearby_stores_tool.py  search_by_category_tool.py  test.py  test_tool.py
(+232 files in other folders)
