[project]
name = "ecoscan_ai"
version = "0.1.0"
description = "ecoscan-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "==3.13.13"
dependencies = [
    "crewai[tools]==1.14.5",
    "fastapi==0.136.3",
]

[project.scripts]
ecoscan_ai = "ecoscan_ai.main:run"
run_crew = "ecoscan_ai.main:run"
train = "ecoscan_ai.main:train"
replay = "ecoscan_ai.main:replay"
test = "ecoscan_ai.main:test"
run_with_trigger = "ecoscan_ai.main:run_with_trigger"
api = "ecoscan_ai.api.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
