[project]
name = "ecoscan_ai"
version = "0.1.0"
description = "ecoscan-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "==3.13.13"
dependencies = [
    "aio-pika==9.6.2",
    "crewai[tools]==1.14.7",
    "fastapi[standard]==0.137.2",
]

[dependency-groups]
dev = [
    "poethepoet==0.46.0",
    "ruff==0.15.18",
]

[project.scripts]
ecoscan_ai = "ecoscan_ai.main:run"
run_crew = "ecoscan_ai.main:run"
train = "ecoscan_ai.main:train"
replay = "ecoscan_ai.main:replay"
test = "ecoscan_ai.main:test"
run_with_trigger = "ecoscan_ai.main:run_with_trigger"
api = "ecoscan_ai.api.main:start"

[tool.poe.tasks]
format = "ruff format . --check"
format-fix = "ruff format ."
check = "ruff check ."
check-fix = "ruff check --fix ."
lint = ["format", "check"]
fix = ["format-fix", "check-fix"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
