[project]
name = "ecoscan_ai"
version = "0.1.0"
description = "ecoscan-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "==3.13.13"
dependencies = [
    "aio-pika==9.6.2",
    "crewai[tools]==1.14.7",
    "fastapi[standard]==0.138.0",
    "litellm==1.89.4",
    "pika==1.4.1",
]

[dependency-groups]
dev = [
    "poethepoet==0.46.0",
    "ruff==0.15.19",
]

[project.scripts]
ecoscan_ai = "ecoscan_ai.main:workers"

[tool.poe.tasks]
format = "ruff format . --check"
format-fix = "ruff format ."
check = "ruff check ."
check-fix = "ruff check --fix ."
lint = ["format", "check"]
fix = ["format-fix", "check-fix"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
